--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/ULL-ESIT-DSI-1617/estudiar-cookies-y-sessions-en-expressjs-alejandro-raul-35l2-p4.git",
-    "gitbook": "https://git.gitbook.com/alu0100769579/estudiar-las-rutas-en-expressjs.git"
+    "gitbook": "https://git.gitbook.com/alu0100769579/estudiar-cookies-y-sesiones-en-expressjs.git"
   },
   "keywords": [
     "gitbook",
@@ -33,6 +33,7 @@
     "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-beta.1",
     "express": "^4.15.0",
+    "express-session": "^1.15.1",
     "gh-pages": "^0.3.1",
     "gitbook": "^2.1.0",
     "gitbook-cli": "^0.3.4",
